# pkgprobe

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  test.pkgtrace
.github/workflows/: publish.yml
docs/: DEPLOY.md  DESIGN-CVE-CHECK.md  TRACE-INTUNE.md  USAGE.md
pkgprobe/: banner.py  cli.py  models.py
pkgprobe/analyzers/: __init__.py  exe.py  exe_preflight.py  msi.py  signatures.py  telemetry.py
pkgprobe/enrichment/: __init__.py  cve.py
pkgprobe/trace/: bundle.py  candidates.py  evidence.py  scorer.py  session.py  subtype.py  switch_policy.py  weighting.py
pkgprobe_trace/: api_auth.py  api_db.py  api_production.py  api_server.py  api_usage.py  api_webhooks.py  diff_engine.py  installer_executor.py  installplan_generator.py  intunewin_packager.py  manifest_builder.py  procmon_controller.py  procmon_tuning.py  psadt_wrapper.py  stripe_config.py  trace_api.py  trace_cli.py  trace_contract.py  trace_noise.py  trace_progress.py  trace_worker.py  verified_manifest.py  vmware_controller.py  vmx_generator.py  wrapper_verifier.py
pkgprobe_trace/psadt_template/: AppDeployToolkit.ps1  AppDeployToolkitConfig.xml  AppDeployToolkitExtensions.ps1  AppDeployToolkitMain.ps1  LICENSE  NOTICE
scripts/: check_version.py  scan_exe_nsis.py
tests/: test_diff_engine.py  test_exe_analysis.py  test_manifest_msi.py  test_msi_metadata.py  test_procmon_tuning.py  test_psadt_wrapper.py  test_subtype.py  test_subtype_false_positives.py  test_subtype_structural.py  test_trace_contract.py  test_trace_contract_writer.py  test_trace_noise.py  test_version_aware.py  test_wrapper_verifier.py
