[project]
name = "pkgprobe"
dynamic = ["version"]
description = "Windows-first static installer analysis for endpoint / CPE teams"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["windows", "installer", "packaging", "endpoint", "intune", "sccm", "cpe"]
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "pydantic>=2.7.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "jsonschema>=4.0.0",
]
trace = [
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
]
cloud = [
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
  "stripe>=8.0.0",
  "sqlalchemy>=2.0.0",
  "httpx>=0.27.0",
]

[project.scripts]
pkgprobe = "pkgprobe.cli:app"
pkgprobe-trace = "pkgprobe_trace.trace_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pkgprobe", "pkgprobe_trace"]

[tool.hatch.version]
path = "pkgprobe/__init__.py"
